expense module swagger updations and route changes
